--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,27 +3,26 @@ cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 project(randomhao)
 
 #For find module path
-set(CMAKE_MODULE_PATH "${MODULE_EXTRA_PATH}" ${CMAKE_MODULE_PATH})
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "~/lib/Modules")
 
 #For definitions
 add_definitions(${COMPILER_EXTRA_DEF})
 
 #For c++ flag
-if(CMAKE_CXX_FLAGS STREQUAL "")
-   set(CMAKE_CXX_FLAGS "-Wall -O3 -std=c++11")
-endif()
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
+#For library
 set(lib_all "")
 
-#For sprng
-add_definitions(-DPOINTER_SIZE=8)
-find_package(sprng REQUIRED)
-include_directories(${sprng_include_dirs})
-set(lib_all ${lib_all} ${sprng_libraries})
-
-#For GMP library
-find_package(gmp REQUIRED)
-set(lib_all ${lib_all} ${gmp_libraries})
+   #For sprng
+   add_definitions(-DPOINTER_SIZE=8)
+   find_package(sprng REQUIRED)
+   include_directories(${sprng_include_dirs})
+   set(lib_all ${lib_all} ${sprng_libraries})
+   
+   #For GMP library
+   find_package(gmp REQUIRED)
+   set(lib_all ${lib_all} ${gmp_libraries})
 
 
 include_directories(inc)
