--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,15 +15,14 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(lib_all "")
 
    #For sprng
-   add_definitions(-DPOINTER_SIZE=8)
    find_package(sprng REQUIRED)
+   add_definitions(${sprng_definitions})
    include_directories(${sprng_include_dirs})
    set(lib_all ${lib_all} ${sprng_libraries})
    
    #For GMP library
    find_package(gmp REQUIRED)
    set(lib_all ${lib_all} ${gmp_libraries})
-
 
 include_directories(inc)
 
